# rag_demo

./: .env.example  README.md  docker-compose.yml  langgraph.json  pyproject.toml
data/: rag_demo_checkpoint_blobs_2025-12-06_143406.sql  rag_demo_checkpoint_migrations_2025-12-06_143332.sql  rag_demo_checkpoint_writes_2025-12-06_143654.sql  rag_demo_checkpoints_2025-12-06_143341.sql
docs/: ARCHITECTURE_REFACTOR_20251207.md  DESIGN_LANGCHAIN_RAG.md  DESIGN_LANGGRAPH_AGENTIC_RAG.md  DESIGN_LANGGRAPH_MEMORY_STORE.md  DOCUMENT_PROCESSING.md  ECS_DEPLOYMENT.md  ERROR_ANALYSIS.md  FRONTEND_MESSAGE_PERSISTENCE_ISSUE.md  FRONTEND_STORAGE_ARCHITECTURE copy.md  MESSAGE_PERSISTENCE_FIX.md  REDIS_STREAM_FLOW.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: ChatInputWithUpload.tsx  ChatWindow.tsx  DocumentUpload.tsx  ImageModal.tsx  MessageDebugger.tsx  MessageInput.tsx  NodeStep.tsx  NodeTimeline.tsx  Sidebar.tsx  TurnView.tsx  WebSearchToggle.tsx
frontend/src/hooks/: useChatStream.ts  useDocumentUpload.ts
openspec/: CHANGES_STATUS.md  project.md
openspec/changes/add-document-upload-with-markitdown/: README.md  constraints.md  design.md  proposal.md  tasks.md
openspec/changes/add-mineru-document-processor/: proposal.md  tasks.md
openspec/changes/add-project-search-tool/: constraints.md  design.md  proposal.md  tasks.md
openspec/changes/add-react-chat-frontend/: proposal.md  tasks.md
openspec/changes/add-redis-streaming/: proposal.md  tasks.md
scripts/: __init__.py  init_vectorstore.py  start_backend.py
src/agent/: __init__.py  context.py  graph.py  prompts.py  state.py  vectorstore.py
src/api/: __init__.py  app.py  dependencies.py  schemas.py  utils.py
src/config/: settings.py
src/db/: __init__.py  checkpointer.py  database.py  memory_store.py
src/infra/: __init__.py  redis_pubsub.py
src/tools/: project_search.py  retrieval.py  web_search.py
src/utils/: __init__.py  langsmith_client.py  llm.py  markitdown_converter.py  mineru_processor.py
tests/unit_tests/: test_redis_pubsub.py  test_redis_stream.py
(+22 files in other folders)
